# giga-stonks-api

./: .gitignore  Cargo.toml  README.md  api.http
alphavantage/: Cargo.toml
alphavantage/src/: lib.rs  market_status.rs
finnhub/: Cargo.toml
finnhub/src/: lib.rs  symbol_quote.rs
src/: indices.rs  lib.rs  main.rs
src/alphavantage_api/: earnings_calendar.rs  lib.rs  market_status.rs  mod.rs  news_sentiment.rs
src/finnhub_api/: company_profile.rs  lib.rs  market_news.rs  mod.rs  social_sentiment.rs  symbol_quote.rs
src/handlers/: alphavantage.rs  finnhub.rs  mod.rs
