[package]
name = "giga-stonks-api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
axum = "0.6.6"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = ["json"] }
thiserror = "1.0.38"
url = "2.3.1"
sync_wrapper = "0.1.2"
shuttle-service = { version = "0.10.0", features = ["web-axum"] }
shuttle-secrets = "0.10.0"
