[package]
name = "giga-stonks-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.6"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = ["json"] }
thiserror = "1.0.38"
url = "2.3.1"
shuttle-secrets = "0.12.0"
tower-http = { version = "0.4.0", features = ["cors"] }
tower = "0.4.13"
shuttle-axum = "0.12.0"
shuttle-runtime = "0.12.0"
